# PageTurner

./: README.md  pyproject.toml
pageturner/: asgi.py  settings.py  wsgi.py
templates/: base.html
templates/books/: home.html
