[tool.poetry]
name = "pageturner"
version = "0.1.0"
description = "PageTurner is a service for selling books of various genres"
authors = ["Ilya Tsybulenok <ilyatsybulenok@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
